updates before taking computer in

--- a/docs/ESDG_GQ/dg.bib
+++ b/docs/ESDG_GQ/dg.bib
@@ -1,3 +1,41 @@
+@article{nordstrom2006conservative,
+  title={Conservative finite difference formulations, variable coefficients, energy estimates and artificial dissipation},
+  author={Nordstr{\"o}m, Jan},
+  journal={Journal of Scientific Computing},
+  volume={29},
+  number={3},
+  pages={375--404},
+  year={2006},
+  publisher={Springer}
+}
+
+@article{lenoir1986optimal,
+  title={Optimal isoparametric finite elements and error estimates for domains involving curved boundaries},
+  author={Lenoir, Mo},
+  journal={SIAM Journal on Numerical Analysis},
+  volume={23},
+  number={3},
+  pages={562--580},
+  year={1986},
+  publisher={SIAM}
+}
+@article{bernardi1989optimal,
+  title={Optimal finite-element interpolation on curved domains},
+  author={Bernardi, Christine},
+  journal={SIAM Journal on Numerical Analysis},
+  volume={26},
+  number={5},
+  pages={1212--1240},
+  year={1989},
+  publisher={SIAM}
+}
+@inproceedings{zwanenburg2017necessity,
+  title={{On the Necessity of Superparametric Geometry Representation for Discontinuous Galerkin Methods on Domains with Curved Boundaries}},
+  author={Zwanenburg, Philip and Nadarajah, Sivakumaran},
+  booktitle={23rd AIAA Computational Fluid Dynamics Conference},
+  pages={3946},
+  year={2017}
+}
 
 @inproceedings{debonis2013solutions,
 	doi = {10.2514/6.2013-382},
@@ -97,7 +135,7 @@ keywords = "Hyperbolic conservation laws, Summation-by-parts, Stability, Conserv
 }
 
 @article{chan2018discretely,
-  title={Discretely entropy stable weight-adjusted discontinuous Galerkin methods on curvilinear meshes},
+  title={{Discretely entropy stable weight-adjusted discontinuous Galerkin methods on curvilinear meshes}},
   author={Chan, Jesse and Wilcox, Lucas C},
   journal={arXiv preprint arXiv:1805.10934},
   year={2018}
@@ -1346,6 +1384,13 @@ publisher={Elsevier}
   pages={142--168},
   year={2016},
   publisher={Academic Press}
+}
+
+@book{quarteroni1994introduction,
+  title={{Numerical Approximation of Partial Differential Equations}},
+  author={Quarteroni, Alfio and Valli, Alberto},
+  year={1994},
+  publisher={Springer}
 }
 
 @book{ipsen2009numerical,
